mountd: do not warn about using class mask with -mask

The previous code would warn that the mask was being defaulted to
an obsolete class mask even if -mask was present after -network.
Import a fix from Peter Much with a little tweaking, deferring the
warning until after all parameters are processed.

PR:		263011
Obtained from:	pmc at citilink.dinoex.sub.org
MFC after:	3 days
Reviewed by:	rmacklem
Differential Revision:	https://reviews.freebsd.org/D41774